keycloak/config-examples/edge/keycloak-vs-443.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: keycloak-http-vs
  namespace: gloo-system
spec:
  sslConfig:
    secretRef:
      name: upstream-tls
      namespace: gloo-system
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-keycloak-8080
            namespace: gloo-system
